--- a/Practicas Bootstrap/leccion-4.html
+++ b/Practicas Bootstrap/leccion-4.html
@@ -33,18 +33,18 @@
                <h1>Columnas Alineadas Verticalmente</h1>
             </div>
          </div>
-         <div class="fila-1 row align-items-start">
+         <div class="fila-1 row align-items-start"><!--Alinea las columnas verticalmente al inicio-->
             <!-- Las col en auto obtienen la altura de su elemento padre, en este caso el row -->
             <div class="col">Columna #1</div>
             <div class="col">Columna #2</div>
             <div class="col">Columna #3</div>
          </div>
-         <div class="fila-1 row align-items-center">
+         <div class="fila-1 row align-items-center"><!--Alinea las columnas verticalmente al centro-->
             <div class="col">Columna #1</div>
             <div class="col">Columna #2</div>
             <div class="col">Columna #3</div>
          </div>
-         <div class="fila-1 row align-items-end">
+         <div class="fila-1 row align-items-end"><!--Alinea las columnas verticalmente al final-->
             <div class="col">Columna #1</div>
             <div class="col">Columna #2</div>
             <div class="col">
@@ -57,9 +57,9 @@
             </div>
          </div>
          <div class="fila-1 row">
-            <div class="col align-self-start">Columna #1</div>
-            <div class="col align-self-center">Columna #2</div>
-            <div class="col align-self-end">Columna #3</div>
+            <div class="col align-self-start">Columna #1</div><!--Alinea la columna independientemente al inicio-->
+            <div class="col align-self-center">Columna #2</div><!--Alinea la columna independientemente al centro-->
+            <div class="col align-self-end">Columna #3</div><!--Alinea la columna independientemente al final-->
          </div>
          <div class="contenedor-enlaces row justify-content-around">
             <a class="col-auto" href="leccion-3.html">Lección anterior</a>
