--- a/Practicas Bootstrap/leccion-11.html
+++ b/Practicas Bootstrap/leccion-11.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-12">
                <hr />
-               <!-- Clase diaplay es para darle un estilo diferente a las etiquetas, trazo mas delgado y tamaño de letra mayor -->
+               <!-- Clase display es para darle un estilo diferente a las etiquetas, trazo mas delgado y tamaño de letra mayor -->
                <h1 class="display-1">Encabezado Display</h1>
                <h1 class="display-2">Encabezado Display</h1>
                <h1 class="display-3">Encabezado Display</h1>
@@ -54,7 +54,7 @@
             </div>
             <div class="col-12">
                <hr />
-               <!-- Clase para indicar parrafo importante, resaltado -->
+               <!-- Clase para indicar parrafo importante, resaltado, distinto estilo de texto -->
                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam veritatis voluptate asperiores consequuntur accusamus.</p>
 
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero aperiam veritatis voluptate asperiores consequuntur accusamus.</p>
