--- a/Practicas Bootstrap/leccion-14.html
+++ b/Practicas Bootstrap/leccion-14.html
@@ -31,10 +31,10 @@
                <h1>Imagenes y Figures</h1>
             </div>
          </header>
-         <!-- La clase no-gutters se aplica al row y esta elimina los paddings por defecto que tengas las columnas -->
+         <!-- La clase no-gutters se aplica al row y esta elimina los paddings por defecto que tengan las columnas -->
          <div class="row no-gutters">
             <div class="col-4 columna">
-               <!-- img-fluid sirve para que una imagen se adabpte al tamaño de la columna -->
+               <!-- img-fluid sirve para que una imagen se adapte al tamaño de la columna -->
                <img class="img-fluid" src="http://lorempixel.com/800/800/" alt="" />
             </div>
             <div class="w-100"></div>
